name:                courtside
category:            Game
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          Joseph Rock <wax818@gmail.com>
homepage:            https://github.com/j-rock/courtside
bug-reports:         https://github.com/j-rock/courtside/issues
copyright:           Copyright (C) 2016 Joseph Rock
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/courtside.git

executable courtside
  default-language:    Haskell2010
  hs-source-dirs:      exec-src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:
    base               >= 4.8  && < 4.9,
    SFML-control       >= 0.2  && < 0.3,
    courtside

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Game,
    Game.Courtside,
      Game.Courtside.GameState,
        Game.Courtside.GameState.Athlete,
        Game.Courtside.GameState.Court,
      Game.Courtside.Render,
      Game.Courtside.Update,
    Game.Lib,
      Game.Lib.Camera,
      Game.Lib.Control,
      Game.Lib.Dimensions,
      Game.Lib.Lens,
      Game.Lib.Math,
    Game.SFML,
      Game.SFML.Context,
      Game.SFML.Loop

  build-depends:
    base               >= 4.8  && < 4.9,
    SFML               >= 0.2  && < 0.3,
    SFML-control       >= 0.2  && < 0.3,
    microlens-platform,
    mtl,
    template-haskell

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-depends:
    base                       >= 4.8 && < 4.9,
    QuickCheck,
    hspec,
    courtside
